Update google analytics tags
Signed-off-by: John Gomersall <thegoms@gmail.com>

--- a/tables.html
+++ b/tables.html
@@ -19,14 +19,14 @@
         .revealed TD.Result.Correct span.Answer { width:0%; visibility:hidden}
         .revealed TD.Result.Correct span.Answer:before { content: "\2714"; visibility:visible}
     </style>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVKS4QC9G6"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y29LF4EW12"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LVKS4QC9G6');
+  gtag('config', 'G-Y29LF4EW12');
 </script>
 </head>
 <body onLoad="FormLoad()">
