--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   	  	td {text-align: right}
   	  	td.norm {text-align: left}
   	</style>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVKS4QC9G6"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y29LF4EW12"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-LVKS4QC9G6');
+  gtag('config', 'G-Y29LF4EW12');
 </script>
 <script type="text/javascript">
   window.addEventListener("load", function() {
